--- a/TeamProject [1]/test/testStyle.css
+++ b/TeamProject [1]/test/testStyle.css
@@ -1,5 +1,7 @@
-*{
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 input {
@@ -20,47 +22,65 @@ img {
   margin: 5px 0;
 }
 
-span{
+span {
   margin: 0 5px;
 }
 
 body {
   margin: 0 auto;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+main{
+  display:flex;
   align-items: center;
-  box-sizing: border-box;
   justify-content: center;
-  /* 페이지 내용을 가운데 정렬 */
+  margin-bottom: 20px;
 }
 
 section {
+  display: flex;
   width: 1000px;
+  flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  padding: 0;
-  justify-content: center;
 }
-.basket{
+
+.basket {
   margin: 30px 0;
 }
 
 .aaa {
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
   display: flex;
 }
 
 .detail {
-  width: 720px;
-  height: 80px;
+  width: 100%;
+  max-width: 720px;
   display: flex;
-  flex-wrap: wrap;
-
+  flex-direction: column;
+  gap: 10px;
 }
 
+.item-info {
+  display: flex;
+  align-items: center;
+}
 
+.item-detail {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(165, 165, 165, 0.3);
+  border-radius: 10px;
+  padding: 10px;
+}
 
 .choose-all {
-  width: 700px;
+  width: 100%;
+  max-width: 700px;
   display: flex;
   align-items: center;
   padding: 10px;
@@ -87,21 +107,50 @@ section {
   background-color: #e60000;
 }
 
-.item-info {
-  display: flex;
-  width: 450px;
+.item-name {
+  flex: 1;
+  margin-left: 5px;
 }
 
-.item-detail {
+.item-option {
+  display: flex;
+  align-items: center;
+}
+
+.option {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.option-delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.option-delete button {
+  border: none;
+  background-color: rgb(255, 255, 255);
+}
+
+.order {
+  width: 100%;
+  max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: auto;
+}
+
+.price, .order-now {
+  height: 70px;
+  background-color: rgba(202, 202, 202, 0.4);
   display: flex;
   justify-content: space-between;
-  border: 1px solid rgba(165, 165, 165, 0.3);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-.item {
-  width: 720px;
+  align-items: center;
+  border: 1px solid rgba(59, 59, 59, 0.3);
 }
 
 .item-name {
@@ -109,6 +158,12 @@ section {
   display: flex;
   padding: 0px;
   margin: 0 auto;
+  flex-direction: column;
+}
+.how-much{
+  font-size: 12px;
+  color: #555;
+  padding: 5px 0 0 7px;
 }
 
 .item-option {
@@ -127,6 +182,7 @@ section {
 .option button{
   background-color: rgb(255, 255, 255);
   border-style: none;
+  cursor: pointer;
 }
 
 .option-delete {
@@ -167,4 +223,13 @@ section {
   align-items: center;
   justify-content: center;
   border: 1px solid rgba(59, 59, 59, 0.3)
+}
+.buy{
+  width: 100%;
+  height: 40px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid #000;
 }
