--- a/TeamProject [1]/test/testStyle.css
+++ b/TeamProject [1]/test/testStyle.css
@@ -1,5 +1,15 @@
-*{
+@font-face {
+  font-family: 'SpoqaHanSansNeo-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+/* 폰트 */
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 input {
@@ -11,61 +21,115 @@ p {
   margin: 0;
 }
 
-h4 {
-  margin: 5px 0 0 5px;
-}
-
 img {
   border-radius: 10px;
-  margin: 5px 0;
 }
 
-span{
+span {
   margin: 0 5px;
 }
 
 body {
   margin: 0 auto;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+main{
+  display:flex;
   align-items: center;
-  box-sizing: border-box;
   justify-content: center;
-  /* 페이지 내용을 가운데 정렬 */
+  margin-bottom: 20px;
+  font-family: 'SpoqaHanSansNeo-Regular';
 }
 
 section {
+  display: flex;
   width: 1000px;
+  flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  padding: 0;
-  justify-content: center;
-}
-.basket{
-  margin: 30px 0;
 }
 
+.cursor {
+  position: absolute;
+  pointer-events: none;    
+}
+
+.cursor img {
+  width: 75px; 
+  height: 75px;
+}
+
+
+
+.basket {
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+
 .aaa {
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
   display: flex;
 }
 
 .detail {
-  width: 720px;
-  height: 80px;
+  width: 100%;
+  max-width: 720px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 10px;
+}
 
+.item-info {
+  display: flex;
+  align-items: center;
+}
+
+.item-detail {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(165, 165, 165, 0.3);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.item-check {
+  width: 20px;
+  height: 20px;
+  opacity: 0.5;
+  transform: translateY(-25px);
+}
+
+.item-info img {
+  margin-left: 12px;
 }
 
 
 
 .choose-all {
-  width: 700px;
+  width: 100%;
+  max-width: 720px;
   display: flex;
   align-items: center;
   padding: 10px;
   background-color: #f8f8f8;
   margin-bottom: 15px;
+}
+
+.choose-all input {
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+  transform: translateY(1.5px);
+  opacity: 0.5;
 }
 
 .delete {
@@ -87,46 +151,38 @@ section {
   background-color: #e60000;
 }
 
-.item-info {
-  display: flex;
-  width: 450px;
-}
 
-.item-detail {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid rgba(165, 165, 165, 0.3);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-.item {
-  width: 720px;
-}
-
-.item-name {
-  width: 400px;
-  display: flex;
-  padding: 0px;
-  margin: 0 auto;
-}
 
 .item-option {
   width: 265px;
   display: flex;
   justify-content: flex-end;
+  display: flex;
+  align-items: center;
 }
 
 .option {
-  align-items: center;
   display: flex;
   align-items: center;
+  gap: 10px;
   justify-content: center;
   height: 80px;
 }
-.option button{
-  background-color: rgb(255, 255, 255);
-  border-style: none;
+
+.option button {
+  appearance: none;
+  border: none;                     
+  cursor: pointer; 
+  border-radius: 20px;
+  background: none;
+}
+
+.dash {
+  margin-top: 5px;
+}
+
+.plus {
+  margin-top: 2px;
 }
 
 .option-delete {
@@ -140,31 +196,64 @@ section {
 }
 
 .option-delete button {
+  cursor: pointer;
+  background-color: rgb(255, 255, 255);
   position: absolute;
   top: 3px;
   right: 5px;
   border-style: none;
-  background-color: rgb(255, 255, 255);
 }
 
 .order {
+  width: 100%;
+  max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: auto;
   width: 250px;
   margin-left: 30px;
 }
 
-.price {
-  height: 70px;
-  background-color: rgba(202, 202, 202, 0.4);
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid rgba(59, 59, 59, 0.3)
+.order p {
+  margin-left: 10px;
 }
 
-.oredernow {
+.order span {
+  margin-right: 10px;
+}
+
+.price, .order-now {
   height: 70px;
-  background-color: rgba(202, 202, 202, 0.4);
+  background-color: #F3F5F7;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  border: 1px solid rgba(59, 59, 59, 0.3)
+}
+
+.item-name {
+  width: 400px;
+  display: flex;
+  padding-left: 12px;
+  flex-direction: column;
+}
+
+.how-much{
+  font-size: 12px;
+  color: #555;
+  padding: 5px 0 0 7px;
+}
+
+.buy{
+  width: 100%;
+  height: 55px;
+  background-color: #e9302d;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+}
+
+.buy:hover {
+  background-color: #dd1a1a;
 }
