--- a/TeamProject [1]/test/testStyle.css
+++ b/TeamProject [1]/test/testStyle.css
@@ -1,73 +1,159 @@
-* {
+@font-face {
+  font-family: 'SpoqaHanSansNeo-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'BMHANNAPro';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  }
+/* 폰트 */
+
+
+*{
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
-input {
-  width: 30px;
-  height: 30px;
+body{
+  background-color:  #F3F5F7;
 }
 
-p {
-  margin: 0;
-}
-
-h4 {
-  margin: 5px 0 0 5px;
-}
-
-img {
-  border-radius: 10px;
-  margin: 5px 0;
-}
-
-span {
-  margin: 0 5px;
-}
-
-body {
+section{
+  width: 1080px;
+  display: flex;
   margin: 0 auto;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-}
-main{
-  display:flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+  justify-content: space-between;
+  font-family: 'SpoqaHanSansNeo-Regular';
 }
 
-section {
-  display: flex;
-  width: 1000px;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
+.list{
+  width: 182px;
+  margin: 64px 0 0 20px;
 }
 
-.basket {
-  margin: 30px 0;
-}
-
-.aaa {
-  width: 100%;
-  max-width: 1000px;
-  display: flex;
-}
-
-.detail {
-  width: 100%;
-  max-width: 720px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.item-info {
+.myeat{
+  height: 44px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
   display: flex;
   align-items: center;
+}
+
+.oneline {
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(12px);
+  height:60px
+}
+
+.list img {
+  height: 60px;
+  width: 60px;
+  transform: translateY(-10px);
+  margin:0px;
+}
+
+.name{
+  padding-left: 5px;
+  height: 52px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  background-image: linear-gradient(transparent 10%, #fbc237 20%);
+  background-repeat: no-repeat;
+  background-size: 36% 0.5em;
+  background-position: 13% 69%;
+}
+
+.detail-list{
+  padding: 14px 16px 15px 0px;
+  font-size: 14px;
+  color: rgb(126, 128, 130);
+  font-weight: 700;
+  margin-top: 10px;
+}
+
+.detail-select{
+  padding: 14px 16px 15px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+}
+
+.order{
+  text-decoration: underline;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.detail-noselect{
+  padding: 14px 16px 15px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  align-items: center;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px -1px inset;
+  cursor: pointer;
+}
+
+.detail div:hover {
+  background-color: #F3F5F7;
+}
+
+.info{
+  width: 824px;
+  margin: 64px 10px 0 0;
+}
+
+.content-name{
+  color: rgb(24, 26, 28);
+  height: 44px;
+  letter-spacing: -0.4px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+}
+
+hr{
+  border-color: rgb(231, 231, 231, 0.3);
+  background: rgb(231, 231, 231, 0.3);
+  height: 1px;
+}
+.content{
+  background-color: white;
+  margin: 20px 0 100px 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding-bottom: 10px;
+  /* font-family: 'BMHANNAPro';
+  font-weight: normal;  요거는 상담해야될듯*/
+  width: 100%; /* 전체 너비를 차지하도록 설정 */
+  box-sizing: border-box; /* padding 포함한 box 크기 계산 */
+}
+
+.box{
+  margin: 10px;
+}
+.date{
+  font-size: 16px;
+  font-weight: 900;
+  color: black;
+  margin: 7px 0 0 10px
 }
 
 .item-detail {
@@ -75,82 +161,15 @@ section {
   justify-content: space-between;
   border: 1px solid rgba(165, 165, 165, 0.3);
   border-radius: 10px;
-  padding: 10px;
+  margin-top: 10px;
 }
-
-.choose-all {
-  width: 100%;
-  max-width: 700px;
+.item-info {
   display: flex;
-  align-items: center;
-  padding: 10px;
-  background-color: #f8f8f8;
-  margin-bottom: 15px;
+  width: 450px;
 }
-
-.delete {
-  margin-left: auto;
-}
-
-.delete button {
-  background-color: #ff4d4d;
-  color: white;
-  border: none;
-  padding: 5px 15px;
-  margin-left: auto;
-  cursor: pointer;
-  font-size: 14px;
-  border-radius: 4px;
-}
-
-.delete button:hover {
-  background-color: #e60000;
-}
-
-.item-name {
-  flex: 1;
-  margin-left: 5px;
-}
-
-.item-option {
-  display: flex;
-  align-items: center;
-}
-
-.option {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.option-delete {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 20px;
-}
-
-.option-delete button {
-  border: none;
-  background-color: rgb(255, 255, 255);
-}
-
-.order {
-  width: 100%;
-  max-width: 250px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-left: auto;
-}
-
-.price, .order-now {
-  height: 70px;
-  background-color: rgba(202, 202, 202, 0.4);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid rgba(59, 59, 59, 0.3);
+img {
+  border-radius: 10px;
+  margin: 5px;
 }
 
 .item-name {
@@ -159,6 +178,11 @@ section {
   padding: 0px;
   margin: 0 auto;
   flex-direction: column;
+}
+.order-number{
+  font-size:12px;
+  margin: 3px 0 0 1px;
+  color: #666;
 }
 .how-much{
   font-size: 12px;
@@ -179,10 +203,14 @@ section {
   justify-content: center;
   height: 80px;
 }
-.option button{
-  background-color: rgb(255, 255, 255);
-  border-style: none;
-  cursor: pointer;
+.option-delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+  width: 80px;
+  height: 80px;
+  position: relative;
 }
 
 .option-delete {
@@ -195,41 +223,14 @@ section {
   position: relative;
 }
 
-.option-delete button {
-  position: absolute;
-  top: 3px;
-  right: 5px;
-  border-style: none;
-  background-color: rgb(255, 255, 255);
-}
 
-.order {
-  width: 250px;
-  margin-left: 30px;
-}
-
-.price {
-  height: 70px;
-  background-color: rgba(202, 202, 202, 0.4);
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid rgba(59, 59, 59, 0.3)
-}
-
-.oredernow {
-  height: 70px;
-  background-color: rgba(202, 202, 202, 0.4);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid rgba(59, 59, 59, 0.3)
-}
-.buy{
-  width: 100%;
-  height: 40px;
-  background-color: #007bff;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  border: 1px solid #000;
+@keyframes bounce {
+  0% {
+    transform: translateY(0); 
+    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.3); /* 텍스트 바로 아래에 그림자 */
+  }
+  100% {
+    transform: translateY(-20px); 
+    text-shadow: 0 10px 10px rgba(0, 0, 0, 0.4); /* 위로 이동 시 더 큰 그림자 */
+  }
 }
