--- a/snack/배송창-담겨있음.css
+++ b/snack/배송창-담겨있음.css
@@ -1,34 +1,63 @@
+@font-face {
+  font-family: 'SpoqaHanSansNeo-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'BMHANNAPro';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  }
+/* 폰트 */
+
+
 *{
   margin: 0;
 }
 
 body{
-  background-color: rgba(200, 200, 200, 0.4);
-  font-family: "Noto Sans KR", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+  background-color:  #F3F5F7;
 }
+
 section{
   width: 1080px;
   display: flex;
   margin: 0 auto;
   padding: 0;
   justify-content: space-between;
+  font-family: 'SpoqaHanSansNeo-Regular';
 }
+
 .list{
   width: 182px;
   margin: 64px 0 0 20px;
 }
+
 .myeat{
   height: 44px;
   font-size: 20px;
   font-weight: 700;
   line-height: 28px;
-  padding: bottom 16px;
   display: flex;
   align-items: center;
 }
+
+.oneline {
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(12px);
+  height:60px
+}
+
+.list img {
+  height: 60px;
+  width: 60px;
+  transform: translateY(-10px);
+  margin:0px;
+}
+
 .name{
   padding-left: 5px;
   height: 52px;
@@ -37,15 +66,20 @@ section{
   align-items: center;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.05);
+  background-image: linear-gradient(transparent 10%, #fbc237 20%);
+  background-repeat: no-repeat;
+  background-size: 36% 0.5em;
+  background-position: 13% 69%;
 }
+
 .detail-list{
   padding: 14px 16px 15px 0px;
   font-size: 14px;
   color: rgb(126, 128, 130);
   font-weight: 700;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  
+  margin-top: 10px;
 }
+
 .detail-select{
   padding: 14px 16px 15px;
   font-weight: 700;
@@ -55,9 +89,13 @@ section{
   border: 1px solid rgba(0, 0, 0, 0.05);
   cursor: pointer;
 }
+
 .order{
   text-decoration: underline;
+  font-size: 15px;
+  font-weight: bold;
 }
+
 .detail-noselect{
   padding: 14px 16px 15px;
   display: flex;
@@ -68,10 +106,16 @@ section{
   box-shadow: rgba(0, 0, 0, 0.05) 0px -1px inset;
   cursor: pointer;
 }
+
+.detail div:hover {
+  background-color: #F3F5F7;
+}
+
 .info{
   width: 824px;
   margin: 64px 10px 0 0;
 }
+
 .content-name{
   color: rgb(24, 26, 28);
   height: 44px;
@@ -84,8 +128,9 @@ section{
 }
 
 hr{
-  border-color: rgba(126, 128, 130, 0.3);
-  border-width: 1px;
+  border-color: rgb(231, 231, 231, 0.3);
+  background: rgb(231, 231, 231, 0.3);
+  height: 1px;
 }
 .content{
   background-color: white;
@@ -95,15 +140,12 @@ hr{
   justify-content: flex-start;
   flex-direction: column;
   padding-bottom: 10px;
+  /* font-family: 'BMHANNAPro';
+  font-weight: normal;  요거는 상담해야될듯*/
   width: 100%; /* 전체 너비를 차지하도록 설정 */
   box-sizing: border-box; /* padding 포함한 box 크기 계산 */
 }
-.collect{
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius:10px;
-  padding:0 5px 10px 5px;
-  margin-top:10px;
-}
+
 .box{
   margin: 10px;
 }
@@ -179,4 +221,16 @@ img {
   width: 80px;
   height: 80px;
   position: relative;
+}
+
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0); 
+    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.3); /* 텍스트 바로 아래에 그림자 */
+  }
+  100% {
+    transform: translateY(-20px); 
+    text-shadow: 0 10px 10px rgba(0, 0, 0, 0.4); /* 위로 이동 시 더 큰 그림자 */
+  }
 }
