--- a/snack/상품등록.css
+++ b/snack/상품등록.css
@@ -16,6 +16,7 @@ select{
     box-sizing: border-box;
     margin: 3px 0 10px 0;
     text-align:left;
+    width:130px;
 }
 .category{
     font-weight: bold;
